sum all endpoint working
- Sum all endpoint now returns sum of emissions for all years
- refactoring of mapping for better clarity and to reduce code
repetition