@@ -3,6 +3,7 @@ package com.emissions.industrialemissionsmap.service.region;
 import com.emissions.industrialemissionsmap.dto.AtlanticDto;
 import com.emissions.industrialemissionsmap.dto.EmitterDto;
 import com.emissions.industrialemissionsmap.dto.MaritimeDto;
+import com.emissions.industrialemissionsmap.mapper.AggregateEmitterMapper;
 import com.emissions.industrialemissionsmap.mapper.EmitterMapper;
 import com.emissions.industrialemissionsmap.mapper.RegionMapper;
 import com.emissions.industrialemissionsmap.model.DataSet;
@@ -13,6 +14,7 @@ import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
 
+import java.util.ArrayList;
 import java.util.List;
 
 @Service
@@ -39,7 +41,7 @@ public class AtlanticServiceImpl implements AtlanticService {
                 .findAllByYearAndFacilityProvinceTerritoryAndDataSet(year, "New Brunswick", activeDataSet);
         List<Emitter> newfoundlandEmitters = emitterRepository
                 .findAllByYearAndFacilityProvinceTerritoryAndDataSet(year, "Newfoundland and Labrador", activeDataSet);
-        return mapToAtlanticDto(novaScotiaEmitters, peiEmitters, newBrunswickEmitters, newfoundlandEmitters);
+        return mapToDto(novaScotiaEmitters, peiEmitters, newBrunswickEmitters, newfoundlandEmitters);
     }
 
     @Override
@@ -53,32 +55,31 @@ public class AtlanticServiceImpl implements AtlanticService {
         }
     }
 
-    // TODO: implement sum
     private AtlanticDto getSummedEmitters(List<Integer> years) {
         DataSet activeDataSet = dataSetService.findActiveDataSet();
-        List<Emitter> novaScotiaEmitters = emitterRepository
-                .findAllByYearAndFacilityProvinceTerritoryAndDataSet(years.getFirst(), "Nova Scotia", activeDataSet);
-        List<Emitter> peiEmitters = emitterRepository
-                .findAllByYearAndFacilityProvinceTerritoryAndDataSet(years.getFirst(), "Prince Edward Island", activeDataSet);
-        List<Emitter> newBrunswickEmitters = emitterRepository
-                .findAllByYearAndFacilityProvinceTerritoryAndDataSet(years.getFirst(), "New Brunswick", activeDataSet);
-        List<Emitter> newfoundlandEmitters = emitterRepository
-                .findAllByYearAndFacilityProvinceTerritoryAndDataSet(years.getFirst(), "Newfoundland and Labrador", activeDataSet);
-        return mapToAtlanticDto(novaScotiaEmitters, peiEmitters, newBrunswickEmitters, newfoundlandEmitters);
+        List<List<Object[]>> pronviceData = new ArrayList<>();
+        pronviceData.add(emitterRepository.sumYearsByFacilityProvinceTerritory(years,  "Nova Scotia", activeDataSet));
+        pronviceData.add(emitterRepository.sumYearsByFacilityProvinceTerritory(years,  "Prince Edward Island", activeDataSet));
+        pronviceData.add(emitterRepository.sumYearsByFacilityProvinceTerritory(years,  "New Brunswick", activeDataSet));
+        pronviceData.add(emitterRepository.sumYearsByFacilityProvinceTerritory(years,  "NewFoundLand", activeDataSet));
+        List<List<Emitter>> emitters = AggregateEmitterMapper.mapAggregateEmittersListToEmitters(pronviceData);
+        return mapToDto(emitters.get(0), emitters.get(1), emitters.get(2), emitters.get(3));
     }
 
     @Override
     public AtlanticDto getEmittersAllYearsSum() {
-        return null;
+        DataSet activeDataSet = dataSetService.findActiveDataSet();
+        List<Integer> years = activeDataSet.getYears().stream().toList();
+        return getSummedEmitters(years);
     }
 
-    private AtlanticDto mapToAtlanticDto(List<Emitter> novaScotiaEmitters,
+    private AtlanticDto mapToDto(List<Emitter> novaScotiaEmitters,
                                          List<Emitter> peiEmitters,
                                          List<Emitter> newBrunswickEmitters,
                                          List<Emitter> newfoundlandEmitters ) {
         List<EmitterDto> novaScotiaEmitterDto = emitterMapper.emittersToEmitterDtos(novaScotiaEmitters);
-        List<EmitterDto> newBrunswickEmitterDto = emitterMapper.emittersToEmitterDtos(newBrunswickEmitters);
         List<EmitterDto> peiEmitterDto = emitterMapper.emittersToEmitterDtos(peiEmitters);
+        List<EmitterDto> newBrunswickEmitterDto = emitterMapper.emittersToEmitterDtos(newBrunswickEmitters);
         List<EmitterDto> newfoundlandEmitterDto = emitterMapper.emittersToEmitterDtos(newfoundlandEmitters);
         return regionMapper.provincesToAtlantic(novaScotiaEmitterDto, peiEmitterDto, newBrunswickEmitterDto, newfoundlandEmitterDto);
     }
